# AegisOps

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
src/aegisops/: cli.py
src/aegisops/core/: cases.py  evidence.py  freeze.py  retention.py  vault_fs.py
src/aegisops/plugins/report/: report_manager.py
src/aegisops/security/: integrity.py  signing.py
tests/: test_freeze_cli_aliases.py  test_freeze_full_retention.py  test_freeze_list_verify_all.py  test_freeze_status.py  test_freeze_status_all.py  test_freeze_verify.py
