[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisops"
version = "0.1.0"
description = "AegisOps - cyber security operations platform (local-first)"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42",
  "reportlab>=4",
]

[project.scripts]
aegisops = "aegisops.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
